--- a/Android/mopub-android-sdk/.classpath
+++ b/Android/mopub-android-sdk/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="/Users/andu/android-sdk-mac_x86/add-ons/addon_google_apis_google_inc_4/libs/maps.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/andu/android-sdk-mac_x86/add-ons/addon_google_apis_google_inc_4/docs/reference"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
