--- a/Android/mopub-android-simpleadsdemo/default.properties
+++ b/Android/mopub-android-simpleadsdemo/default.properties
@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-3
+target=Google Inc.:Google APIs:3
 android.library.reference.1=../mopub-android-sdk
